tests/snapshots/snapshots__budget_log_src_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (483 words)

__private_api.rs
     9→#[cfg(not(feature = "kv"))]
    10→pub type Value<'a> = &'a str;
    12→mod sealed {
    14→    pub trait KVs<'a> {
    15→        fn into_kvs(self) -> Option<&'a [(&'a str, super::Value<'a>)]>;
    16→    }
    39→pub struct GlobalLogger;
   112→#[cfg(feature = "kv")]
   113→mod kv_support {
   114→    use crate::kv;
   115→
   116→    pub type Value<'a> = kv::Value<'a>;
kv/error.rs
     5→pub struct Error {
     6→    inner: Inner,
      →…
     9→#[derive(Debug)]
    10→enum Inner {
    11→    #[cfg(feature = "std")]
    12→    Boxed(std_support::BoxedError),
    13→    Msg(&'static str),
    14→    #[cfg(feature = "value-bag")]
    15→    Value(crate::kv::value::inner::Error),
    16→    Fmt,
    17→}
    29→    pub(super) fn from_value …
    37→    pub(super) fn into_value …
    69→mod std_support {
    73→    pub(super) type BoxedError = Box<dyn error::Error + Send + Sync>;
kv/key.rs
     7→pub trait ToKey {
     8→    /// Perform the conversion.
    37→pub struct Key<'k> {
    38→    // NOTE: This may become `Cow<'k, str>`
      →…
    94→mod std_support {
   113→mod sval_support {
   136→mod serde_support {
kv/mod.rs
   246→mod error;
   247→mod key;
   250→mod source;
   252→mod value;
   259→#[cfg(feature = "kv_unstable")]
   260→pub mod source;
   261→#[cfg(feature = "kv_unstable")]
   262→pub mod value;
kv/source.rs
    51→pub trait Source {
    52→    /// Visit key-values.
    91→fn get_default …
   114→fn count_default …
   235→pub trait VisitSource<'kvs> {
   236→    /// Visit a key-value pair.
   280→mod std_support {
kv/value.rs
    11→pub trait ToValue {
    12→    /// Perform the conversion.
   119→pub struct Value<'v> {
   120→    inner: inner::Inner<'v>,
      →…
   204→    fn from_inner …
   288→macro_rules! impl_to_value_primitive {
   312→macro_rules! impl_to_value_nonzero_primitive {
   336→macro_rules! impl_value_to_primitive {
   390→mod std_support {
   462→pub trait VisitValue<'v> {
   463→    /// Visit a `Value`.
   602→pub(in crate::kv) mod inner {
   721→pub(in crate::kv) mod inner {
   738→    pub enum Inner<'v> {
   739→        None,
      →…
  1129→macro_rules! as_debug {
  1139→macro_rules! as_display {
  1149→macro_rules! as_error {
  1159→macro_rules! as_serde {
  1169→macro_rules! as_sval {
lib.rs
   405→#[macro_use]
   406→mod macros;
   407→mod serde;
   409→#[cfg(feature = "kv")]
   410→pub mod kv;
   421→struct AtomicUsize {
   422→    v: Cell<usize>,
   423→}
   475→pub enum Level {
   476→    /// The "error" level.
   477→    ///
   478→    /// Designates very serious errors.
      →…
   516→    type Err = ParseLevelError;
   636→pub enum LevelFilter {
   637→    /// A level lower than all log levels.
   638→    Off,
   639→    /// Corresponds to the `Error` log level.
      →…
   666→    type Err = ParseLevelError;
   781→enum MaybeStaticStr<'a> {
   782→    Static(&'static str),
   783→    Borrowed(&'a str),
   784→}
   787→    #[inline]
   788→    fn get(&self) -> &'a str {
   842→pub struct Record<'a> {
   843→    metadata: Metadata<'a>,
   844→    args: fmt::Arguments<'a>,
   845→    module_path: Option<MaybeStaticStr<'a>>,
      →…
   858→struct KeyValues<'a>(&'a dyn kv::Source);
  1003→pub struct RecordBuilder<'a> {
  1004→    record: Record<'a>,
  1005→}
  1158→pub struct Metadata<'a> {
  1159→    level: Level,
  1160→    target: &'a str,
  1161→}
  1200→pub struct MetadataBuilder<'a> {
  1201→    metadata: Metadata<'a>,
  1202→}
  1249→pub trait Log: Sync + Send {
  1250→    /// Determines if a log message with the specified metadata would be
  1251→    /// logged.
  1252→    ///
  1283→struct NopLogger;
  1482→#[cfg(target_has_atomic = "ptr")]
  1483→fn set_logger_inner<F>(make_logger: F) -> Result<(), SetLoggerError>
  1484→where
  1485→    F: FnOnce() -> &'static dyn Log,
  1486→{
  1549→pub struct SetLoggerError(());
  1566→pub struct ParseLevelError(());
  1599→#[doc(hidden)]
  1600→pub mod __private_api;
  1602→/// The statically resolved maximum log level.
  1603→///
  1604→/// See the crate level documentation for information on how to configure this.
  1605→///
      →…
  1611→pub const STATIC_MAX_LEVEL: LevelFilter = match cfg!(debug_assertions) {
macros.rs
serde.rs
