tests/snapshots/snapshots__budget_log_src_kv_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (980 tokens)

error.rs
     5→pub struct Error {
     6→    inner: Inner,
     7→}
    10→enum Inner {
    21→    pub fn msg …
    69→mod std_support {
    70→    use super::*;
    77→        pub fn boxed …

key.rs
     7→pub trait ToKey {
     9→    fn to_key(&self) -> Key<'_>;
    37→pub struct Key<'k> {
    45→    pub fn from_str(key: &'k str) -> Self {
    53→    pub fn as_str(&self) -> &str {
    61→    pub fn to_borrowed_str(&self) -> Option<&'k str> {
    94→mod std_support {
    95→    use super::*;
   113→mod sval_support {
   114→    use super::*;
   136→mod serde_support {
   137→    use super::*;

mod.rs
   246→mod error;
   247→mod key;
   250→mod source;
   252→mod value;
   254→pub use self::error::Error;
   255→pub use self::key::{Key, ToKey};
   256→pub use self::source::{Source, VisitSource};
   257→pub use self::value::{ToValue, Value, VisitValue};
   260→pub mod source;
   262→pub mod value;
   265→pub use self::source::Visitor;

source.rs
    51→pub trait Source {
    62→    fn visit …
    73→    fn get …
    85→    fn count …
    91→fn get_default …
   114→fn count_default …
   235→pub trait VisitSource<'kvs> {
   237→    fn visit_pair …
   280→mod std_support {
   462→pub use VisitSource as Visitor;

value.rs
     8→pub use crate::kv::Error;
    11→pub trait ToValue {
    13→    fn to_value …
   119→pub struct Value<'v> {
   125→    pub fn from_any …
   133→    pub fn from_debug …
   143→    pub fn from_display …
   154→    pub fn from_serde …
   165→    pub fn from_sval …
   175→    pub fn from_dyn_debug …
   182→    pub fn from_dyn_display …
   190→    pub fn from_dyn_error …
   197→    pub fn null …
   204→    fn from_inner …
   217→    pub fn visit …
   379→    pub fn to_borrowed_error …
   384→    pub fn to_borrowed_str …
   390→mod std_support {
   395→    use super::*;
   438→        pub fn to_cow_str …
   462→pub trait VisitValue<'v> {
   469→    fn visit_any …
   472→    fn visit_null …
   477→    fn visit_u64 …
   482→    fn visit_i64 …
   487→    fn visit_u128 …
   492→    fn visit_i128 …
   497→    fn visit_f64 …
   502→    fn visit_bool …
   507→    fn visit_str …
   512→    fn visit_borrowed_str …
   517→    fn visit_char …
   524→    fn visit_error …
   530→    fn visit_borrowed_error …
   602→pub(in crate::kv) mod inner {
   610→    use super::*;
   612→    pub use value_bag::ValueBag as Inner;
   614→    pub use value_bag::Error;
   721→pub(in crate::kv) mod inner {
   735→    use super::*;
   738→    pub enum Inner<'v> {
  1055→    pub fn capture_debug …
  1065→    pub fn capture_display …
  1075→    pub fn capture_error …
  1085→    pub fn capture_serde …
  1095→    pub fn capture_sval …
  1123→pub use VisitValue as Visit;
  1129→macro_rules! as_debug {
  1139→macro_rules! as_display {
  1149→macro_rules! as_error {
  1159→macro_rules! as_serde {
  1169→macro_rules! as_sval {
