tests/snapshots/snapshots__budget_log_src_kv_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4007 tokens)

error.rs
     1→use std::fmt;
     3→/// An error encountered while working with structured data.
     4→#[derive(Debug)]
     5→pub struct Error {
     6→    inner: Inner,
     7→}
     9→#[derive(Debug)]
    10→enum Inner {
    11→    #[cfg(feature = "std")]
    12→    Boxed(std_support::BoxedError),
    13→    Msg(&'static str),
    14→    #[cfg(feature = "value-bag")]
    15→    Value(crate::kv::value::inner::Error),
    16→    Fmt,
    17→}
    21→    pub fn msg …
    28→    #[cfg(feature = "value-bag")]
    29→    pub(super) fn from_value(err: crate::kv::value::inner::Error) -> Self {
    30→        Error {
    31→            inner: Inner::Value(err),
      →…
    36→    #[cfg(feature = "value-bag")]
    37→    pub(super) fn into_value(self) -> crate::kv::value::inner::Error {
    38→        match self.inner {
    39→            Inner::Value(err) => err,
      →…
    68→#[cfg(feature = "std")]
    69→mod std_support {
    70→    use super::*;
    71→    use std::{error, io};
    73→    pub(super) type BoxedError = Box<dyn error::Error + Send + Sync>;
    77→        pub fn boxed …

key.rs
     3→use std::borrow::Borrow;
     4→use std::fmt;
     6→/// A type that can be converted into a [`Key`](struct.Key.html).
     7→pub trait ToKey {
     9→    fn to_key …
    36→#[derive(Clone, Debug, PartialEq, Eq, PartialOrd, Ord, Hash)]
    37→pub struct Key<'k> {
    38→    // NOTE: This may become `Cow<'k, str>`
    39→    key: &'k str,
    40→}
    45→    pub fn from_str …
    53→    pub fn as_str …
    61→    pub fn to_borrowed_str …
    93→#[cfg(feature = "std")]
    94→mod std_support {
    95→    use super::*;
    97→    use std::borrow::Cow;
   112→#[cfg(feature = "kv_sval")]
   113→mod sval_support {
   114→    use super::*;
   116→    use sval::Value;
   117→    use sval_ref::ValueRef;
   135→#[cfg(feature = "kv_serde")]
   136→mod serde_support {
   137→    use super::*;
   139→    use serde_core::{Serialize, Serializer};

mod.rs
   246→mod error;
   247→mod key;
   249→#[cfg(not(feature = "kv_unstable"))]
   250→mod source;
   251→#[cfg(not(feature = "kv_unstable"))]
   252→mod value;
   254→pub use self::error::Error;
   255→pub use self::key::{Key, ToKey};
   256→pub use self::source::{Source, VisitSource};
   257→pub use self::value::{ToValue, Value, VisitValue};
   259→#[cfg(feature = "kv_unstable")]
   260→pub mod source;
   261→#[cfg(feature = "kv_unstable")]
   262→pub mod value;
   265→pub use self::source::Visitor;

source.rs
     6→use crate::kv::{Error, Key, ToKey, ToValue, Value};
     7→use std::fmt;
     9→/// A source of key-values.
    10→///
    11→/// The source may be a single pair, a set of pairs, or a filter over a set of pairs.
    12→/// Use the [`VisitSource`](trait.VisitSource.html) trait to inspect the structured data
    13→/// in a source.
    14→///
    15→/// A source is like an iterator over its key-values, except with a push-based API
    16→/// instead of a pull-based one.
    17→///
    18→/// # Examples
    19→///
    20→/// Enumerating the key-values in a source:
    21→///
    22→/// ```
    23→/// # fn main() -> Result<(), log::kv::Error> {
    24→/// use log::kv::{self, Source, Key, Value, VisitSource};
    25→///
    26→/// // A `VisitSource` that prints all key-values
    27→/// // VisitSources are fed the key-value pairs of each key-values
    28→/// struct Printer;
    29→///
    30→/// impl<'kvs> VisitSource<'kvs> for Printer {
    31→///     fn visit_pair(&mut self, key: Key<'kvs>, value: Value<'kvs>) -> Result<(), kv::Error> {
    32→///         println!("{key}: {value}");
    33→///
    34→///         Ok(())
    35→///     }
    36→/// }
    37→///
    38→/// // A source with 3 key-values
    39→/// // Common collection types implement the `Source` trait
    40→/// let source = &[
    41→///     ("a", 1),
    42→///     ("b", 2),
    43→///     ("c", 3),
    44→/// ];
    45→///
    46→/// // Pass an instance of the `VisitSource` to a `Source` to visit it
    47→/// source.visit(&mut Printer)?;
    48→/// # Ok(())
    49→/// # }
    50→/// ```
    51→pub trait Source {
    62→    fn visit …
    73→    fn get …
    85→    fn count …
    90→/// The default implementation of `Source::get`
    91→fn get_default<'v>(source: &'v (impl Source + ?Sized), key: Key) -> Option<Value<'v>> {
    92→    struct Get<'k, 'v> {
    93→        key: Key<'k>,
      →…
   113→/// The default implementation of `Source::count`.
   114→fn count_default(source: impl Source) -> usize {
   115→    struct Count(usize);
   116→
      →…
   234→/// A visitor for the key-value pairs in a [`Source`](trait.Source.html).
   235→pub trait VisitSource<'kvs> {
   237→    fn visit_pair …
   240→#[allow(clippy::needless_lifetimes)] // Not needless.
   241→impl<'a, 'kvs, T> VisitSource<'kvs> for &'a mut T
   242→where
   243→    T: VisitSource<'kvs> + ?Sized,
   244→{
   279→#[cfg(feature = "std")]
   280→mod std_support {
   281→    use super::*;
   282→    use std::borrow::Borrow;
   283→    use std::collections::{BTreeMap, HashMap};
   284→    use std::hash::{BuildHasher, Hash};
   285→    use std::rc::Rc;
   286→    use std::sync::Arc;
   462→pub use VisitSource as Visitor;

value.rs
     6→use std::fmt;
     8→pub use crate::kv::Error;
    10→/// A type that can be converted into a [`Value`](struct.Value.html).
    11→pub trait ToValue {
    13→    fn to_value …
    33→/// A value in a key-value.
    34→///
    35→/// Values are an anonymous bag containing some structured datum.
    36→///
    37→/// # Capturing values
    38→///
    39→/// There are a few ways to capture a value:
    40→///
    41→/// - Using the `Value::from_*` methods.
    42→/// - Using the `ToValue` trait.
    43→/// - Using the standard `From` trait.
    44→///
    45→/// ## Using the `Value::from_*` methods
    46→///
    47→/// `Value` offers a few constructor methods that capture values of different kinds.
    48→///
    49→/// ```
    50→/// use log::kv::Value;
    51→///
    52→/// let value = Value::from_debug(&42i32);
    53→///
    54→/// assert_eq!(None, value.to_i64());
    55→/// ```
    56→///
    57→/// ## Using the `ToValue` trait
    58→///
    59→/// The `ToValue` trait can be used to capture values generically.
    60→/// It's the bound used by `Source`.
    61→///
    62→/// ```
    63→/// # use log::kv::ToValue;
    64→/// let value = 42i32.to_value();
    65→///
    66→/// assert_eq!(Some(42), value.to_i64());
    67→/// ```
    68→///
    69→/// ## Using the standard `From` trait
    70→///
    71→/// Standard types that implement `ToValue` also implement `From`.
    72→///
    73→/// ```
    74→/// use log::kv::Value;
    75→///
    76→/// let value = Value::from(42i32);
    77→///
    78→/// assert_eq!(Some(42), value.to_i64());
    79→/// ```
    80→///
    81→/// # Data model
    82→///
    83→/// Values can hold one of a number of types:
    84→///
      →…
   119→pub struct Value<'v> {
   120→    inner: inner::Inner<'v>,
   121→}
   125→    pub fn from_any …
   133→    pub fn from_debug …
   143→    pub fn from_display …
   154→    pub fn from_serde …
   165→    pub fn from_sval …
   175→    pub fn from_dyn_debug …
   182→    pub fn from_dyn_display …
   190→    pub fn from_dyn_error …
   197→    pub fn null …
   203→    /// Get a value from an internal primitive.
   204→    fn from_inner<T>(value: T) -> Self
   205→    where
   206→        T: Into<inner::Inner<'v>>,
   207→    {
   208→        Value {
   209→            inner: value.into(),
      →…
   217→    pub fn visit …
   234→#[cfg(feature = "kv_serde")]
   235→impl<'v> serde_core::Serialize for Value<'v> {
   244→#[cfg(feature = "kv_sval")]
   245→impl<'v> sval::Value for Value<'v> {
   251→#[cfg(feature = "kv_sval")]
   252→impl<'v> sval_ref::ValueRef<'v> for Value<'v> {
   288→macro_rules! impl_to_value_primitive {
   289→    ($($into_ty:ty,)*) => {
   290→        $(
      →…
   312→macro_rules! impl_to_value_nonzero_primitive {
   313→    ($($into_ty:ident,)*) => {
   314→        $(
      →…
   336→macro_rules! impl_value_to_primitive {
   337→    ($(#[doc = $doc:tt] $into_name:ident -> $into_ty:ty,)*) => {
   338→        impl<'v> Value<'v> {
      →…
   379→    pub fn to_borrowed_error …
   384→    pub fn to_borrowed_str …
   389→#[cfg(feature = "kv_std")]
   390→mod std_support {
   391→    use std::borrow::Cow;
   392→    use std::rc::Rc;
   393→    use std::sync::Arc;
   395→    use super::*;
   438→        pub fn to_cow_str …
   450→/// A visitor for a [`Value`].
   451→///
   452→/// Also see [`Value`'s documentation on serialization]. Value visitors are a simple alternative
   453→/// to a more fully-featured serialization framework like `serde` or `sval`. A value visitor
   454→/// can differentiate primitive types through methods like [`VisitValue::visit_bool`] and
   455→/// [`VisitValue::visit_str`], but more complex types like maps and sequences
   456→/// will fallthrough to [`VisitValue::visit_any`].
   457→///
   458→/// If you're trying to serialize a value to a format like JSON, you can use either `serde`
   459→/// or `sval` directly with the value. You don't need a visitor.
   460→///
   461→/// [`Value`'s documentation on serialization]: Value#serialization
   462→pub trait VisitValue<'v> {
   469→    fn visit_any …
   472→    fn visit_null …
   477→    fn visit_u64 …
   482→    fn visit_i64 …
   487→    fn visit_u128 …
   492→    fn visit_i128 …
   497→    fn visit_f64 …
   502→    fn visit_bool …
   507→    fn visit_str …
   512→    fn visit_borrowed_str …
   517→    fn visit_char …
   524→    fn visit_error …
   530→    fn visit_borrowed_error …
   538→#[allow(clippy::needless_lifetimes)] // Not needless.
   539→impl<'a, 'v, T: ?Sized> VisitValue<'v> for &'a mut T
   540→where
   541→    T: VisitValue<'v>,
   542→{
   588→    fn visit_error …
   593→    fn visit_borrowed_error …
   601→#[cfg(feature = "value-bag")]
   602→pub(in crate::kv) mod inner {
   610→    use super::*;
   612→    pub use value_bag::ValueBag as Inner;
   614→    pub use value_bag::Error;
   720→#[cfg(not(feature = "value-bag"))]
   721→pub(in crate::kv) mod inner {
   735→    use super::*;
   737→    #[derive(Clone)]
   738→    pub enum Inner<'v> {
   739→        None,
   740→        Bool(bool),
   741→        Str(&'v str),
   742→        Char(char),
   743→        I64(i64),
   744→        U64(u64),
   745→        F64(f64),
   746→        I128(i128),
   747→        U128(u128),
   748→        Debug(&'v dyn fmt::Debug),
   749→        Display(&'v dyn fmt::Display),
   750→    }
  1055→    pub fn capture_debug …
  1065→    pub fn capture_display …
  1075→    pub fn capture_error …
  1085→    pub fn capture_serde …
  1095→    pub fn capture_sval …
  1123→pub use VisitValue as Visit;
  1125→/// Get a value from a type implementing `std::fmt::Debug`.
  1126→#[cfg(feature = "kv_unstable")]
  1127→#[deprecated(note = "use the `key:? = value` macro syntax instead")]
  1128→#[macro_export]
  1129→macro_rules! as_debug {
  1130→    ($capture:expr) => {
      →…
  1135→/// Get a value from a type implementing `std::fmt::Display`.
  1136→#[cfg(feature = "kv_unstable")]
  1137→#[deprecated(note = "use the `key:% = value` macro syntax instead")]
  1138→#[macro_export]
  1139→macro_rules! as_display {
  1140→    ($capture:expr) => {
      →…
  1145→/// Get a value from an error.
  1146→#[cfg(feature = "kv_unstable_std")]
  1147→#[deprecated(note = "use the `key:err = value` macro syntax instead")]
  1148→#[macro_export]
  1149→macro_rules! as_error {
  1150→    ($capture:expr) => {
      →…
  1157→/// Get a value from a type implementing `serde::Serialize`.
  1158→#[macro_export]
  1159→macro_rules! as_serde {
  1160→    ($capture:expr) => {
      →…
  1165→/// Get a value from a type implementing `sval::Value`.
  1166→#[cfg(feature = "kv_unstable_sval")]
  1167→#[deprecated(note = "use the `key:sval = value` macro syntax instead")]
  1168→#[macro_export]
  1169→macro_rules! as_sval {
  1170→    ($capture:expr) => {
      →…
